--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-Test
+<!DOCTYPE html>
+<html lang="en" >
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+    <!--<link rel="stylesheet" media="screen" href="asdf!css/screen.css"asdf />-->
+    <title>xyena Warframe Guides</title>
+  </head>
+  
+  <body>
+  
+    <header>
+	</header>
+	
+    <nav>
+      <ul>
+	  </ul>
+    </nav>
+    
+    <main>
+	  <p>Site in progress.</p>
+    </main>
+
+    <footer>
+	</footer>
+	
+  </body>
+</html>
