More progress. HTML is next.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet"> 
     <link rel="stylesheet" media="screen" href="!css/screen.css" />
     <title>xyena Warframe Guides</title>
   </head>
@@ -10,15 +11,22 @@
   <body>
   
     <header>
+	  <h2>Hyena&apos;s Warframe Guides</h2>
 	</header>
 	
     <nav>
-      <ul>
-	  </ul>
+      
     </nav>
     
     <main>
 	  <p>Site in progress.</p>
+	  <ul class="why0">
+	    <li>What is this site?</li>
+		<li>Why should I use your guides and not someone else's?</li>
+		<ul class="why1">
+		  <li></li>
+		</ul>
+	  </ul>
     </main>
 
     <footer>
