Spent a lot of time trying to design CSS that I may not even use. Just HTML from here on out. Styling will come later.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
 	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet"> 
-    <link rel="stylesheet" media="screen" href="!css/screen.css" />
+    <!--<link rel="stylesheet" media="screen" href="!css/screen.css" />-->
     <title>xyena Warframe Guides</title>
   </head>
   
   <body>
   
-    <header>
-	  <h2>Hyena&apos;s Warframe Guides</h2>
+    <header class="fcontainer">
+      <div class="top-div-L"><a href="index.html"><img class="imgxyena" src="!images/xyena.png" /></a></div>
+	  <div class="top-div-R"><h2>Warframe Guides</h2></div>
 	</header>
 	
     <nav>
@@ -22,11 +23,18 @@
 	  <p>Site in progress.</p>
 	  <ul class="why0">
 	    <li>What is this site?</li>
+		<ul>
+		  <li class="why1">This site is a compilation of my builds that I frequently use in Warframe that I have developed over the years. Though they were previously displayed in a Google document, I decided I wanted a little more control over the styling of the document, and to gain a little web development experience in the process.</li>
+		</ul>
 		<li>Why should I use your guides and not someone else's?</li>
-		<ul class="why1">
-		  <li></li>
+		<ul>
+		  <li class="why1">These are all builds I have created, not ones that are borrowed from any other source. They have been tested against several missions and are optimized for different kinds of gameplay. Because I play so often and am always experimenting, I can personally guarantee this will be updated as long as I am playing.</li>
 		</ul>
 	  </ul>
+	  
+	  
+
+	  
     </main>
 
     <footer>
