Removed the header image for now and added alt text.

--- a/warframes/index.html
+++ b/warframes/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
 	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet"> 
     <!--<link rel="stylesheet" media="screen" href="!css/screen.css" />-->
-    <title>xyena</title>
+    <title>xyena&mdash;Warframe Guides</title>
   </head>
   
   <body>
   
     <header class="fcontainer">
-      <div class="top-div-L"><a href="index.html"><img class="imgxyena" src="!images/xyenb.png" alt="Home" /></a></div>
+      <div class="top-div-L"><a href="index.html"><img class="imgxyena" src="!images/xyena.png" /></a></div>
 	  <div class="top-div-R"><h2>Warframe Guides</h2></div>
 	</header>
 	
